--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "github_users",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Tampoka.github.io/github_users",
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "prop-types": "^15.8.1",
     "uuid": "^8.3.2"
   }
